--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
     font-family: Canela Deck Web;
     font-size: 48px;
     line-height: 1.2;
-    letter-spacing: -.1px;
+    letter-spacing: -0.1px;
     padding-bottom: 16px;
     color: #f3f4f4;
     font-weight: 400;
@@ -66,7 +66,7 @@
     padding-bottom: 16px;
     text-transform: none;
 }
-.b-header-borde{
+.b-header-border{
     background-color: #f3f4f4;
     border: none;
     margin: 0;
@@ -75,7 +75,7 @@
     position: relative;
     z-index: 2;
 }
-.b-header-borde{
+.b-header-borde::after{
     border-bottom: 10px solid #1e1e1e;
     content: "";
 height: 10px;
@@ -90,4 +90,137 @@ width: 100%;
     max-width: 100%;
     border-style: none;
 }
+.c-block{
+    background-color: black;
+    margin: 0;
+    padding: 32px 0 0;
+    position: relative;
+    z-index: 2;
+    color: #f3f4f4;
+}
+.b-header-container{
+    position: relative;
+    z-index: 2;
+    max-width: 1440px;
+    margin-left: auto;
+    margin-right: 24px;
+    padding-right: 24px;
+    width: 100%;
+}
+.c-block-content{
+ margin-left: -24px;
+ margin-right: -24px;
+ max-width: none;
+ color: #f3f4f4;
+}
+.c-block-title{
+    font-size: 32px;
+    line-height: 1.25;
+    font-style: normal;
+    letter-spacing: -0.1px;
+    font-family: Canela Deck Web;
+    font-weight: 400;
+    padding-bottom: 12px;
+    padding-left: 24px;
+    padding-right: 24px;
+}
+.c-content-block{
+    padding-bottom: 12px;
+    padding-left: 24px;
+    padding-right: 24px;
+    color: #f3f4f4;
+}
+.c-block-description{
+    margin-top: 16px;
+    color: #f3f4f4;
+    font-weight: 400;
+   font-size: 20px;
+   letter-spacing: -0.1px;
+}
+.link-line{
+    color: #f3f4f4;
+}
+.a-btn-text::after{
+    background-color: #656f77;
+    border-color: #656f77;
+    color: #fff;
+    content: "\e903";
+    display: block;
+    font-family: core-icons;
+    font-size: 24px;
+    position: absolute;
+    left: 9px;
+    top: calc(50% + 1px);
+    transform: translateY(-50%);
+
+}
+.b-header__border{
+    border: none;
+    margin: 0;
+    padding-bottom: 32px;
+    padding-top: 40px;
+    position: relative;
+    z-index: 2;
+    background-color: #f3f4f4;
+}
  
+/* section  */
+.c-block-layout{
+    background-color: #0e0e0e;
+    margin: 0;
+    padding-bottom: 32px;
+    position: relative;
+    z-index: 2;
+    color: #f3f4f4;
+}
+.b-left-container{
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 24px;
+    padding-right: 24px;
+    max-width: 1440px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+}
+.image-wrap{
+    position: relative;
+}
+.image{
+    width: 100%;
+    animation: cubic-bezier(.4,0,.2,1) 1s d;
+    animation-duration: 1s;
+}
+.b-right-container{
+
+}
+.b-right-block{
+    margin-top: 32px;
+    color: #f3f4f4;
+    max-width: 848px;
+}
+.right-block-description{
+    color: #f3f4f4;
+    font-size: 24px;
+}
+/* Responsive adjustments for different screen sizes */
+
+/* For screens with width less than 768px */
+@media only screen and (max-width: 767px) {
+    .subheader_title {
+        font-size: 32px;
+    }
+
+    .column-right {
+        font-size: 16px;
+    }
+
+    .menu-object-page {
+        font-size: 16px;
+    }
+
+    .b-header-borde {
+        padding-bottom: 16px;
+        padding-top: 20px;
+    }
+}
